Changed the background color. The list now cycles through burlywood and dark golden rod colors. Their borders are now transparent. The app no longer accepts tasks containing only whitespace. Editing a task by replacing everything with whitespaces or emptying the task completely will result in no changes.

--- a/ToDoAppExtras.css
+++ b/ToDoAppExtras.css
@@ -1,5 +1,15 @@
+body {
+    background-color: darkslategray;
+}
+
+.list-striped li:nth-child(odd) {
+    background-color: burlywood;
+    border-color: transparent;
+}
+
 .list-striped li:nth-child(even) {
-    background-color: gainsboro;
+    background-color: darkgoldenrod;
+    border-color: transparent;
 }
 
 .list-striped li {
